--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -1,6 +1,6 @@
 name: Post welcome comment
 on:
-  pull_request
+  pull_request:
     types: [opened]
 permissions:
-  pul-request: write
+  pull-request: write
