--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -4,7 +4,6 @@ on:
     types: [opened]
 permissions:
   pull-requests: write
-
 jobs:
   welcome:
     name: Post welcome comment
@@ -13,4 +12,4 @@ jobs:
       - run: gh pr comment "$PR_URL" --body "Welcome to the repository!"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_URL: ${{ github.event.pull_requests.html_url }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
